gcpmanagedcertificateandsecretwithNEG/serviceneg.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: web
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
