gcpmanagedcertificateandsecretwithNEG/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deeptech-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: deeptech-cert

spec:
  rules:
  - host: deeptechexpertconsulting.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
